2005-05-26  Sebastien Pouliot  <sebastien@ximian.com> 
 
	* README.vsnet: Instructions about the VS.NET build.
	* mono.sln: Mono solution file for VS.NET 2005.
	* genmdesc.vcproj: Project file for genmdesc.
	* libmono.vcproj: Project file for libmono.
	* mono.vcproj: Project file for mono executable.

2005-05-25  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Do a test for libX11.so that really works :-).

2005-05-22  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Add config stuff for libsqlite{,3} and
	libX11.

	* data/config.in: Add dllmaps for above mentioned libs. This means
	that the devel packages are not needed.

2005-05-17  Zoltan Varga  <vargaz@freemail.hu>

	* man/mono.1: Document the new MONO_DEBUG options.

2005-05-16  Raja R Harinath  <rharinath@novell.com>

	* configure.in (AC_OUTPUT): Add mono/arch/ia64/Makefile.

2005-05-08  Ben Maurer  <bmaurer@ximian.com>

	* scripts/Makefile.am (bin_SCRIPTS): monoresgen.exe is not
	installed, therefore, don't make a script for it.

2005-05-05  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Applied patch from Jakub Bogusz <qboosh@pld-linux.org>.
	Fix library names on sparc-linux and alpha-linux.

2005-05-04  Zoltan Varga  <vargaz@freemail.hu>

	* runtime/Makefile.am: Pass the prefix to the mcs makefiles.

2005-04-28  James Willcox  <james@ximian.com>

	* man/mkbundle.1: add --config-dir flag

2005-04-27  Raja R Harinath  <rharinath@novell.com>

	* configure.in (AC_DISABLE_FAST_INSTALL): Set.

2005-04-25  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Version bumpage

2005-04-25  Raja R Harinath  <rharinath@novell.com>

	Fix #74692.
	* configure.in ($mcsdir/build/config.make): Point RUNTIME and
	ILDISASM to the in-tree versions of mono and monodis.  Propagate
	value of INSTALL to mcs too.
	* runtime/Makefile.am: Avoid passing RUNTIME and ILDISASM to each
	sub-make, now that 'configure' sets up the 'mcs' tree.

2005-04-23  Zoltan Varga  <vargaz@freemail.hu>

	* doc: Remove unused directory.
	